# data-engineering-tools

./: .gitignore  README.md
airbyte/: .env  Makefile  README.md  airbyte-docker-compose.yml
airflow/: Dockerfile  Makefile  README.md  docker-compose.yml
cassandra/: Makefile  README.md  docker-compose.yml
datahub/: Makefile  install.sh  script.sh
duckdb/: Dockerfile  Makefile
grafana/: Makefile  README.md  docker-compose.yml
grafana/shared/alloy/: config.alloy
grafana/shared/grafana/: custom.ini
grafana/shared/prometheus/: prometheus-local.yml
grafana/shared/promtail/: config.yml
grafana/shared/tempo/: tempo.yml
grafana/tests/: log_gen.py
jupyter/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
kafka/: Makefile  README.md  conduktor.yml
kubernetes-for-beginners/: README.md
kubernetes-for-beginners/examples/replicasets/: replicaset.yaml
kubernetes-for-beginners/examples/services/: service.yaml
kubernetes-for-beginners/voting-app/deployments/: result_deployment.yaml  (+1 more)
local-registry/: Makefile  README.md  deployment.yaml  run-registry.sh  service.yaml
localstack/: Makefile  README.md  docker-compose.yml
minikube/: Makefile  README.md
minio/: Makefile  docker-compose.yml
mysql/: Makefile  docker-compose.yml
networks/: Makefile  README.md
opensearch/: Makefile  docker-compose.yml
postgres/: Makefile  docker-compose.yml  enable_cdc.sql  read_only_user.sql
registry/: README.md  run-registry.sh
superset/: Makefile  README.md  docker-compose-image-tag.yml
superset/docker/: docker-init.sh
(+10 files in other folders)
