[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["Tiago Vinicius <vinicius.remigio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "1.0.0"
sklearn = "0.0"
pandas = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
